--- a/Hangman Mk.I/Hangman Mk.I/Hangman Mk.I.csproj
+++ b/Hangman Mk.I/Hangman Mk.I/Hangman Mk.I.csproj
@@ -44,14 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="frmHangman.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmHangman.Designer.cs">
+      <DependentUpon>frmHangman.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmHangman.resx">
+      <DependentUpon>frmHangman.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -73,6 +76,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\hang0.gif" />
+    <Content Include="images\hang1.gif" />
+    <Content Include="images\hang10.gif" />
+    <Content Include="images\hang2.gif" />
+    <Content Include="images\hang3.gif" />
+    <Content Include="images\hang4.gif" />
+    <Content Include="images\hang5.gif" />
+    <Content Include="images\hang6.gif" />
+    <Content Include="images\hang7.gif" />
+    <Content Include="images\hang8.gif" />
+    <Content Include="images\hang9.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
