--- a/Hangman Mk.I/Hangman Mk.I/Hangman Mk.I.csproj
+++ b/Hangman Mk.I/Hangman Mk.I/Hangman Mk.I.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D23F38DB-C023-4E12-B126-B9537FB14C8A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Hangman_Mk.I</RootNamespace>
     <AssemblyName>Hangman Mk.I</AssemblyName>
